[project]
name = "treetop-client"
version = "0.0.6"
description = "Python client library for the Treetop policy server"
authors = [{ name = "Terje Kvernes", email = "terje@kvernes.no" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1,<0.29.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0.0", "pytest-httpx>=0.36.0", "pyright>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treetop_client"]

[tool.pytest.ini_options]
markers = ["integration: run tests against a live policy-server (Docker)"]
addopts = "-m 'not integration'"

[project.urls]
Homepage = "https://github.com/terjekv/treetop-client-python"
Issues = "https://github.com/terjekv/treetop-client-python/issues"
